--- a/oauth2-web/package.json
+++ b/oauth2-web/package.json
@@ -3,13 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@types/react-redux": "^7.1.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^0.24.0",
+    "base-64": "^1.0.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.0",
+    "env-cmd": "^10.1.0",
+    "jquery": "^3.6.0",
+    "react-bootstrap": "^2.0.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
