--- a/springboot-with-oauth2/src/main/resources/application.properties
+++ b/springboot-with-oauth2/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 
+server.port=8888
+
+spring.datasource.url=jdbc:mysql://localhost:3306/oauth2?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.name=oauth2
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+spring.jpa.properties.hibernate.cache.use_query_cache=false
+spring.jpa.properties.hibernate.generate_statistics=false
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# Logging
+logging.level.com.lovemesomecoding=DEBUG
+logging.level.org.springframework.web=WARN
+logging.level.com.amazon=WARN
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
